trying Auth0 to replace GitHub
