# app.js
@@ -1,65 +1,34 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
-
+const {auth, requiresAuth} = require('express-openid-connect');
 const port = process.env.PORT || 8080;
 const app = express();
-const axios = require('axios');
 
-app.use(express.static('static'));
-app.get('/', (req, res)=>{
-  
-  // res.sendFile(path.join(__dirname, '/static/index.html'));
-  // res.sendFile(path.join(__dirname, '/static/age.html'));
+require('dotenv').config();
+
+const config = {
+  authRequired: false,
+  auth0Logout: true,
+  secret: process.env.SECRET,
+  baseURL: process.env.BASE_URL,
+  clientID: process.env.CLIENT_ID,
+  issuerBaseURL: process.env.ISSUER_BASE_URL,
+};
+
+// auth router attaches /login, /logout, and /callback routes to the baseURL
+app.use(auth(config));
+
+// req.isAuthenticated is provided from the auth router
+app.get('/', (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
 });
 
-app.get('/auth', (req, res) => {
-  res.redirect(
-    `https://github.com/login/oauth/authorize?client_id=${process.env.GITHUB_CLIENT_ID}`,
-  );
-});
-app.get('/oauth-callback', ({ query: { code } }, res) => {
-  const body = {
-    client_id: process.env.GITHUB_CLIENT_ID,
-    client_secret: process.env.GITHUB_SECRET,
-    code,
-  };
-  const opts = { headers: { accept: 'application/json' } };
-  axios
-    .post('https://github.com/login/oauth/access_token', body, opts)
-    .then((_res) => _res.data.access_token)
-    .then((token) => {
-      // eslint-disable-next-line no-console
-      console.log('My token:', token);
+app.get('/profile', requiresAuth(), (req, res) =>{
+  res.send(JSON.stringify(req.oidc.user));
 
-      if (token === null){
-        console.log('Hello, you have not logged in.')
-        process.exit();
-      } else {
-        console.log('Got it!');
-      
-        // console.log(token);
-        // res.redirect(`/?token=${token}`);
-        // trying to set up a check.
-        // if (token!= null){
-        //   // app.use('/', require('./routes'));
-        //   // console.log("hello, please see me 1.")
-          
-        // }
-        
-        // res.redirect('http://localhost:8080');
-        
-        
-        
-        
-      }
-      res.redirect(`/?token=${token}`);
-      
-        // res.redirect('/calibre')
-
-    })
-    .catch((err) => res.status(500).json({ err: err.message }));
 });
+
 
 app.use(bodyParser.json())
 app.use((req, res, next) => {
@@ -68,6 +37,7 @@ app.use((req, res, next) => {
   });
   
 app.use('/', require('./routes'));
+
 
 mongodb.initDb((err, mongodb) => {
   if (err) {
