# swagger.json
@@ -5,10 +5,10 @@
     "description": "Hunters Helper",
     "version": "1.0.0"
   },
-  "host": "huntershelp.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/calibre/": {
